Refactoring for the correct look on mobile and tablet screens

--- a/src/components/ChannelsList/ChannelsList.scss
+++ b/src/components/ChannelsList/ChannelsList.scss
@@ -1,7 +1,7 @@
 .channels {
     margin-bottom: 10px;
     position: relative;
-    min-height: calc((100vh - 222px) / 2);
+    min-height: calc((100vh - 112px) / 2);
 }
 
 .channels-list {
