--- a/src/components/FriendsList/FriendsList.scss
+++ b/src/components/FriendsList/FriendsList.scss
@@ -1,6 +1,6 @@
 .friends {
     position: relative;
-    min-height: calc((100vh - 222px) / 2);
+    min-height: calc((100vh - 112px) / 2);
 }
 
 .friends-list {
