--- a/src/components/MainPage/MainPage.scss
+++ b/src/components/MainPage/MainPage.scss
@@ -1,3 +1,4 @@
 .main-page {
     display: flex;
+    min-height: 100vh;
 }
